# dissertation

./: .gitmodules  LICENSE  README.md
Anisotropic_Ashkin_Teller/: CMakeLists.txt
Anisotropic_Ashkin_Teller/config/: L10_config.ini  L12_config.ini  L14_config.ini  L16_config.ini  L18_config.ini  L20_config.ini  L22_config.ini  L24_config.ini  L26_config.ini  L28_config.ini  L30_config.ini  L4_config.ini  L6_config.ini  L8_config.ini
Anisotropic_Ashkin_Teller/src/: const.hpp  hamiltonian.hpp  lattice.hpp  logval.hpp  main.cpp  muca.hpp  muca_simple.hpp  rngclass.dlib.hpp  rngclass.drand.hpp  rngclass.dsfmt.hpp  rngclass.gsl.hpp  rngclass.mar.hpp  simulation.hpp  statistics.hpp  version.hpp  wang_landau.hpp
analyse_data/: CMakeLists.txt  gzstream
analyse_data/src/: discrete_function.hpp  logval.hpp  readfile.hpp  reweight_timeseries.cpp  running_weighted.hpp  string.hpp
external_libraries/gzstream/: CMakeLists.txt
hysteresis/: .gitignore  CMakeLists.txt
hysteresis/config/: cooldown.ini  dummy.ini  heatup.ini
hysteresis/src/: canon.hpp  const.hpp  hamiltonian.hpp  lattice.hpp  logval.hpp  main.cpp  simulation.hpp
original_fixed/: CMakeLists.txt  reproduce.py
original_fixed/src/: config.hpp  discrete_function.hpp  logval.hpp  main.cpp
original_periodic/: .gitignore  CMakeLists.txt  reproduce.py
original_periodic/src/: Array.h  config.hpp  discrete_function.hpp  logval.hpp  main.cpp  rngclass.mar.hpp  timer.hpp
